tests/fixtures/invalid/aggregate_compound_literal_scalar_array_field_pointer_ordering_different_literals.c
struct Packet {
    int values[2];
};

int main(void) {
    return ((struct Packet){{1, 2}}).values < ((struct Packet){{3, 4}}).values;
}
